Try fix for squished `.img-chevron`s

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -121,7 +121,7 @@
 
 .img-chevron {
 	width: 18%;
-	height: auto;
+	height: 100%;
 }
 
 h1, h2, h3, h4, h5, h6 {
